--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
   <footer class="footer">
     <div class="container">
-      &copy; 2025 Jaydeep Industries. All rights reserved.
+      &copy; 2025 Jaydeep Industries. All rights reserved. <span class="developer-credit">| Developed by <span class="developer-name">Dhairya Kanabar</span></span>
     </div>
   </footer>
 
