--- a/index.html
+++ b/index.html
@@ -4,9 +4,54 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jaydeep Industries - Maize Processing Company</title>
+  <meta name="description" content="Jaydeep Industries is a leading maize product supplier based in Gujarat, India, offering high-quality corn grits, corn flour, and more for over 15 years.">
+  <meta name="keywords" content="maize products, corn grits, corn flour, flaking grits, maize cattle feed, Gujarat, India">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.jaydeep-industries.com/">
+  <meta property="og:title" content="Jaydeep Industries - Maize Processing Company">
+  <meta property="og:description" content="Leading manufacturer of high-quality maize products for food, feed and industrial applications in Gujarat, India.">
+  <meta property="og:image" content="https://www.jaydeep-industries.com/logo.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://www.jaydeep-industries.com/">
+  <meta property="twitter:title" content="Jaydeep Industries - Maize Processing Company">
+  <meta property="twitter:description" content="Leading manufacturer of high-quality maize products for food, feed and industrial applications in Gujarat, India.">
+  <meta property="twitter:image" content="https://www.jaydeep-industries.com/logo.png">
+  
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="favicon.png">
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Jaydeep Industries",
+    "url": "https://www.jaydeep-industries.com",
+    "logo": "https://www.jaydeep-industries.com/logo.png",
+    "description": "Leading maize product supplier based in Gujarat, India. Specializing in corn grits, corn flour, cracked corn, flaking grits, and more.",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Rajkot Highway Road, Shekhpar",
+      "addressLocality": "Surendranagar",
+      "postalCode": "363621",
+      "addressRegion": "Gujarat",
+      "addressCountry": "IN"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+919978923725",
+      "contactType": "customer service"
+    },
+    "sameAs": [
+      "https://www.jaydeep-industries.com"
+    ]
+  }
+  </script>
 </head>
 <body>
   <nav class="navbar">
