--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <meta name="description" content="Jaydeep Industries is a leading maize product supplier based in Gujarat, India, offering high-quality corn grits, corn flour, and more for over 15 years.">
   <meta name="keywords" content="maize products, corn grits, corn flour, flaking grits, maize cattle feed, Gujarat, India">
   
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#468c41">
+  <meta name="msapplication-TileColor" content="#468c41">
+  <meta name="msapplication-config" content="browserconfig.xml">
+  <meta name="theme-color" content="#468c41">
+  
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.jaydeep-industries.com/">
@@ -24,7 +35,6 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="icon" type="image/png" href="favicon.png">
   
   <script type="application/ld+json">
   {
