--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="shortcut icon" href="favicon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -23,14 +24,18 @@
   <meta property="og:url" content="https://www.jaydeep-industries.com/">
   <meta property="og:title" content="Jaydeep Industries - Maize Processing Company">
   <meta property="og:description" content="Leading manufacturer of high-quality maize products for food, feed and industrial applications in Gujarat, India.">
-  <meta property="og:image" content="https://www.jaydeep-industries.com/logo.png">
+  <meta property="og:image" content="https://www.jaydeep-industries.com/favicon.png">
+  <meta property="og:image:width" content="512">
+  <meta property="og:image:height" content="512">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:site_name" content="Jaydeep Industries">
 
   <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:card" content="summary">
   <meta property="twitter:url" content="https://www.jaydeep-industries.com/">
   <meta property="twitter:title" content="Jaydeep Industries - Maize Processing Company">
   <meta property="twitter:description" content="Leading manufacturer of high-quality maize products for food, feed and industrial applications in Gujarat, India.">
-  <meta property="twitter:image" content="https://www.jaydeep-industries.com/logo.png">
+  <meta property="twitter:image" content="https://www.jaydeep-industries.com/favicon.png">
   
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -42,7 +47,13 @@
     "@type": "Organization",
     "name": "Jaydeep Industries",
     "url": "https://www.jaydeep-industries.com",
-    "logo": "https://www.jaydeep-industries.com/logo.png",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://www.jaydeep-industries.com/logo.png",
+      "width": "180",
+      "height": "60"
+    },
+    "image": "https://www.jaydeep-industries.com/favicon.png",
     "description": "Leading maize product supplier based in Gujarat, India. Specializing in corn grits, corn flour, cracked corn, flaking grits, and more.",
     "address": {
       "@type": "PostalAddress",
@@ -62,6 +73,12 @@
     ]
   }
   </script>
+
+  <!-- Additional search engine optimization -->
+  <link rel="canonical" href="https://www.jaydeep-industries.com/">
+  <meta name="google-site-verification" content="your-verification-code">
+  <meta name="robots" content="index, follow">
+  <meta name="revisit-after" content="7 days">
 </head>
 <body>
   <nav class="navbar">
