--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <meta name="description" content="Jaydeep Industries is a leading maize product supplier based in Gujarat, India, offering high-quality corn grits, corn flour, and more for over 15 years.">
   <meta name="keywords" content="maize products, corn grits, corn flour, flaking grits, maize cattle feed, Gujarat, India">
   
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="shortcut icon" href="favicon.png">
+  <!-- Favicon - Google search optimization -->
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="manifest" href="site.webmanifest">
   <link rel="mask-icon" href="safari-pinned-tab.svg" color="#468c41">
   <meta name="msapplication-TileColor" content="#468c41">
@@ -24,9 +26,9 @@
   <meta property="og:url" content="https://www.jaydeep-industries.com/">
   <meta property="og:title" content="Jaydeep Industries - Maize Processing Company">
   <meta property="og:description" content="Leading manufacturer of high-quality maize products for food, feed and industrial applications in Gujarat, India.">
-  <meta property="og:image" content="https://www.jaydeep-industries.com/favicon.png">
-  <meta property="og:image:width" content="512">
-  <meta property="og:image:height" content="512">
+  <meta property="og:image" content="https://www.jaydeep-industries.com/android-chrome-192x192.png">
+  <meta property="og:image:width" content="192">
+  <meta property="og:image:height" content="192">
   <meta property="og:image:type" content="image/png">
   <meta property="og:site_name" content="Jaydeep Industries">
 
@@ -35,7 +37,7 @@
   <meta property="twitter:url" content="https://www.jaydeep-industries.com/">
   <meta property="twitter:title" content="Jaydeep Industries - Maize Processing Company">
   <meta property="twitter:description" content="Leading manufacturer of high-quality maize products for food, feed and industrial applications in Gujarat, India.">
-  <meta property="twitter:image" content="https://www.jaydeep-industries.com/favicon.png">
+  <meta property="twitter:image" content="https://www.jaydeep-industries.com/android-chrome-192x192.png">
   
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -49,11 +51,11 @@
     "url": "https://www.jaydeep-industries.com",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://www.jaydeep-industries.com/logo.png",
-      "width": "180",
-      "height": "60"
+      "url": "https://www.jaydeep-industries.com/favicon.ico",
+      "width": "48",
+      "height": "48"
     },
-    "image": "https://www.jaydeep-industries.com/favicon.png",
+    "image": "https://www.jaydeep-industries.com/android-chrome-192x192.png",
     "description": "Leading maize product supplier based in Gujarat, India. Specializing in corn grits, corn flour, cracked corn, flaking grits, and more.",
     "address": {
       "@type": "PostalAddress",
@@ -79,6 +81,22 @@
   <meta name="google-site-verification" content="your-verification-code">
   <meta name="robots" content="index, follow">
   <meta name="revisit-after" content="7 days">
+  
+  <!-- Google search result logo optimization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.jaydeep-industries.com/",
+    "name": "Jaydeep Industries",
+    "description": "Leading maize product supplier based in Gujarat, India.",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.jaydeep-industries.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
 </head>
 <body>
   <nav class="navbar">
