--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <!-- Additional search engine optimization -->
   <link rel="canonical" href="https://www.jaydeep-industries.com/">
-  <meta name="google-site-verification" content="your-verification-code">
+  <meta name="google-site-verification" content="UMk3J4wBUUp1fNGPreDi2yHvIQRzJ4FYo3nB3ff7t_s">
   <meta name="robots" content="index, follow">
   <meta name="revisit-after" content="7 days">
   
